--- a/gigmile_demo/src/index.css
+++ b/gigmile_demo/src/index.css
@@ -27,6 +27,10 @@
     .app__requests-tooltip {
         box-shadow: 0px 8px 8px rgba(50, 50, 71, 0.08), 0px 8px 16px rgba(50, 50, 71, 0.06);
     }
+    .app__logout {
+        box-shadow: inset 0px 1px 0px #F2F4F6;
+        border-radius: 0px 0px 8px 8px;
+    }
     h1 {
         font-size: 20px; ;
         @apply font-medium;
